log
Thu 28 Mar 2024 02:24:40 PM UTC: 
 list.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:37: error: expected expression before ‘>’ token
   42 |   if (list -> current) return list- > current -> data;
      |                                     ^
Compilation failed
3309063
Thu 28 Mar 2024 02:24:57 PM UTC: 
 tests:  5|4
total_score: 25/70
e63f348
Thu 28 Mar 2024 02:32:59 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:55:12: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   55 |   if (list -> next == NULL)
      |            ^~
list.c:57:5: error: expected identifier before ‘return’
   57 |     return list -> data;
      |     ^~~~~~
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
772705d
Thu 28 Mar 2024 02:37:48 PM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
f5804d6
Thu 28 Mar 2024 02:38:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2b4d3b3
Thu 28 Mar 2024 02:42:37 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:21: error: assignment to ‘Node *’ from incompatible pointer type ‘void * (*)(List *)’ {aka ‘void * (*)(struct List *)’} [-Werror=incompatible-pointer-types]
   56 |     list -> current = nextList;
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
f4ba0ff
Thu 28 Mar 2024 02:43:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
bab34c4
Thu 28 Mar 2024 02:47:10 PM UTC: 
 list.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:1: error: expected ‘;’ before ‘}’ token
   56 | }
      | ^
Compilation failed
c6979e0
Thu 28 Mar 2024 02:47:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2d9dc0e
Thu 28 Mar 2024 02:49:24 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
e83fec9
Thu 28 Mar 2024 02:53:39 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
c740502
Thu 28 Mar 2024 02:55:18 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fcc805a
Thu 28 Mar 2024 02:57:37 PM UTC: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
list.c:107:3: error: expected identifier or ‘(’ before ‘}’ token
  107 |   }
      |   ^
list.c:109:1: error: expected identifier or ‘(’ before ‘}’ token
  109 | }
      | ^
Compilation failed
769702a
Thu 28 Mar 2024 02:57:43 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|1
total_score: 55/70
b2867a2
Thu 28 Mar 2024 03:00:36 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
test.c: In function ‘popCurrent’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:129:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  129 | void cleanList(List * list) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2fb0f50
Thu 28 Mar 2024 03:00:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:127:1: error: control reaches end of non-void function [-Werror=return-type]
  127 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
aa8d11f
